Fix mobile tutorial nav behind author card

--- a/resources/scss/components/nav-tutorial.scss
+++ b/resources/scss/components/nav-tutorial.scss
@@ -53,6 +53,7 @@
     width: 100%;
     height: calc(100% - 48px);
     overflow-y: scroll;
+    z-index: 100;
 
     &.-open {
       display: block;
